--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
     "workbench.colorTheme": "Julia (Monokai Vibrant)",
-    "files.autoSave": "onWindowChange"
+    "files.autoSave": "onWindowChange",
+    "conventionalCommits.scopes": [
+        "gitignore",
+        "README"
+    ]
 }
