--- a/Project.toml
+++ b/Project.toml
@@ -1,12 +1,13 @@
 name = "JuNarseseParsers"
 uuid = "0a59fa39-45d5-416d-90fd-544de8e6e92c"
 authors = ["ARCJ137442 <61109168+ARCJ137442@users.noreply.github.com>"]
-version = "1.1.0"
+version = "1.2.0"
 
 [deps]
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 JuNarsese = "11330a76-bea1-45e0-8f80-7114e2f607b1"
 Lerche = "d42ef402-04e6-4356-9f73-091573ea58dc"
+PikaParser = "3bbf5609-3e7b-44cd-8549-7c69f321e792"
 Serialization = "9e88b42a-f829-5b0c-bbe9-9e923198166b"
 XML = "72c71f33-b9b6-44de-8c94-c961784809e2"
 
