--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
           - '1' # Leave this line unchanged. '1' will automatically expand to the latest stable 1.x release of Julia.
           - 'nightly'
         os:
-          # - ubuntu-latest # Temporately disable Ubuntu CI due to `Packages with nested code structure are unable to compiled` and error `SystemError: opening file "/home/runner/work/JuNarsese.jl/JuNarsese.jl/src/Narsese/Terms.jl": No such file or directory`
+          - ubuntu-latest
           - macOS-latest
           - windows-latest
         arch:
@@ -45,6 +45,6 @@ jobs:
       - uses: julia-actions/julia-runtest@v1
         continue-on-error: ${{ matrix.version == 'nightly' }}
       - uses: julia-actions/julia-processcoverage@v1
-      - uses: codecov/codecov-action@v1 # unstable due to unreached subfolders
+      - uses: codecov/codecov-action@v3
         with:
           file: lcov.info
