--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
           - '1' # Leave this line unchanged. '1' will automatically expand to the latest stable 1.x release of Julia.
           - 'nightly'
         os:
-          - ubuntu-latest
+          # - ubuntu-latest # Deprecated because JuNarsese does not support Ubuntu recently.
           - macOS-latest
           - windows-latest
         arch:
@@ -45,6 +45,7 @@ jobs:
       - uses: julia-actions/julia-runtest@v1
         continue-on-error: ${{ matrix.version == 'nightly' }}
       - uses: julia-actions/julia-processcoverage@v1
-      - uses: codecov/codecov-action@v3
+      - name: Upload datas to Codecov
+        uses: codecov/codecov-action@v3
         with:
           file: lcov.info
