--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
           - '1' # Leave this line unchanged. '1' will automatically expand to the latest stable 1.x release of Julia.
           - 'nightly'
         os:
-          # - ubuntu-latest # Deprecated because JuNarsese does not support Ubuntu recently.
+          - ubuntu-latest
           - macOS-latest
           - windows-latest
         arch:
